[gd_scene load_steps=2 format=3 uid="uid://bc31yvngmuab4"]

[ext_resource type="Script" path="res://element_button.gd" id="1_igg5f"]

[node name="element_button" type="Control"]
custom_minimum_size = Vector2(175, 50)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -952.0
offset_bottom = -598.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_igg5f")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 155.0
offset_bottom = 45.0
disabled = true
text = "PLACEHODER"

[node name="OptionButton" type="OptionButton" parent="."]
unique_name_in_owner = true
clip_contents = true
layout_mode = 0
offset_left = 165.0
offset_top = 12.0
offset_right = 275.0
offset_bottom = 38.0
fit_to_longest_item = false

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_parent_selector_item_selected"]
